[project]
name = "get-papers"
version = "0.1.0"
description = "Fetch research papers from PubMed"
authors = [
    {name = "Albin Joseph", email = "albinjoseph71@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "get_paper:main"




